Fixed alignment of form in admin/event

--- a/module/CommonBundle/Resources/assets/admin/less/icons.less
+++ b/module/CommonBundle/Resources/assets/admin/less/icons.less
@@ -418,7 +418,8 @@
     .icon(103);
 }
 
-.ticket {
+.ticket,
+.event {
     .icon(104);
 }
 
